# GigaChip8

./: CMakeLists.txt  CPU.c  CPU.h  Memory.c  Memory.h  main.c
include/: CPU.h  Memory.h
src/: CPU.c  Memory.c
